# thanos-cleaner

./: LICENSE  README.md  setup.cfg
src/thanos-cleaner/: __init__.py  __main__.py  thanos.py
