[metadata]
name = thanos-cleaner
version = 1.0.1
author = Rajan Kumar
author_email = rajan90742@gmail.com
description = Thanos Cleaner-Randmoly delete 50 percent of the files from given directory.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rajankumar7/thanos-cleaner
project_urls =
    Bug Tracker = https://github.com/rajankumar7/thanos-cleaner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
include_package_data = True

[options.packages.find]
where = src